--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@types/node": "^14.14.6",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "uuid": "^8.3.1",
     "ws": "^7.3.1"
