--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript-plugin-css-modules": "^2.8.0"
   }
 }
