--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@types/ws": "^7.2.9",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
@@ -22,14 +20,16 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "nodemon": "^2.0.6",
-    "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "prettier": "^2.1.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.2.9",
     "express": "^4.17.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
     "uuid": "^8.3.1",
     "ws": "^7.3.1"
   },
