--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -24,10 +26,13 @@
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.9",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
     "uuid": "^8.3.1",
