--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "tsc && node dist/index.js",
     "dev": "nodemon",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
