--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,13 @@
     "prettier": "^2.1.2"
   },
   "dependencies": {
+    "@types/bunyan": "^1.8.6",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.9",
+    "bunyan": "^1.8.14",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
