--- a/server/package.json
+++ b/server/package.json
@@ -50,5 +50,9 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.2",
+    "utf-8-validate": "^5.0.3"
   }
 }
