--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,12 @@
     "@types/styled-components": "^5.1.4",
     "@types/use-ackee": "^1.0.0",
     "classnames": "^2.2.6",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
