--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.5",
     "use-ackee": "^1.0.0",
