--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": "12.x"
   },
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "ts-node --transpile-only src/index.ts",
     "dev": "nodemon",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
